--- a/WithTrip/src/main/resources/templates/index.html
+++ b/WithTrip/src/main/resources/templates/index.html
@@ -33,107 +33,71 @@
 <!-- CSS Just for demo purpose, don't include it in your project -->
 <link rel="stylesheet" href="css/demo.css" />
 </head>
+
 <body>
 	<div class="wrapper">
+	
 		<!-- Sidebar -->
 		<div class="sidebar" data-background-color="dark">
 			<div class="sidebar-logo">
+			
 				<!-- Logo Header -->
 				<div class="logo-header" data-background-color="dark">
-				<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#FFFFFF" class="bi bi-send" viewBox="0 0 16 16" style="margin-right: 15px;">
-  				<path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576zm6.787-8.201L1.591 6.602l4.339 2.76z"/>
-				</svg>
-				<h2 style="color: #FFFFFF;">WithTrip</h2>
-
+					<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#FFFFFF" class="bi bi-send" viewBox="0 0 16 16" style="margin-right: 15px;">
+  						<path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576zm6.787-8.201L1.591 6.602l4.339 2.76z"/>
+					</svg>
+					<h2 style="color: #FFFFFF;">WithTrip</h2>
 				</div>
 				<!-- End Logo Header -->
-
+				
 			</div>
 			<div class="sidebar-wrapper scrollbar scrollbar-inner">
 				<div class="sidebar-content">
 					<ul class="nav nav-secondary">
-						<li class="nav-item active"><a data-bs-toggle="collapse"
-							href="#dashboard" class="collapsed" aria-expanded="false"> <i
-								class="fas fa-home"></i>
-								<p>Dashboard</p>
-						</a>
-							<div class="collapse" id="dashboard"></div></li>
-						<li class="nav-section"><span class="sidebar-mini-icon">
+						<li class="nav-item active">
+							  <a href="/" class="collapsed">
+								<i class="fas fa-home"></i>
+									<p>Dashboard</p>
+							</a>	
+						<div class="collapse" id="dashboard"></div>
+						</li>
+						
+						
+						<li class="nav-section">
+							<span class="sidebar-mini-icon">
 								<i class="fa fa-ellipsis-h"></i>
-						</span>
-							<h4 class="text-section">Components</h4></li>
+							</span>
+							<h4 class="text-section">Components</h4>
+						</li>
 
 
-						<li class="nav-item"><a href="tripplan" class="d-flex align-items-center" style="text-decoration: none;">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-suitcase-fill" viewBox="0 0 16 16" style="margin-right: 15px;">
-      					<path d="M6 .5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5V3h1.5A1.5 1.5 0 0 1 13 4.5v9a1.5 1.5 0 0 1-1.004 1.416A1 1 0 1 1 10 15H6a1 1 0 1 1-1.997-.084A1.5 1.5 0 0 1 3 13.5v-9A1.5 1.5 0 0 1 4.5 3H6zM9 1H7v2h2zM6 5.5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0z" />
-   						</svg> <span>TripPlan</span>
-						</a></li>
+						<li class="nav-item">
+							<a href="tripplan" class="d-flex align-items-center" style="text-decoration: none;">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-suitcase-fill" viewBox="0 0 16 16" style="margin-right: 15px;">
+      								<path d="M6 .5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5V3h1.5A1.5 1.5 0 0 1 13 4.5v9a1.5 1.5 0 0 1-1.004 1.416A1 1 0 1 1 10 15H6a1 1 0 1 1-1.997-.084A1.5 1.5 0 0 1 3 13.5v-9A1.5 1.5 0 0 1 4.5 3H6zM9 1H7v2h2zM6 5.5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0z" />
+   								</svg>
+   							<span>TripPlan</span>
+							</a>
+						</li>
 
-						<li class="nav-item"><a data-bs-toggle="collapse"
-							href="#submenu"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16" style="margin-right: 15px;">
-  							<path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
-						</svg>
-								<p>Log In</p>
-						</a></li>
+						<li class="nav-item">
+							<a id="login" href="login">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16" style="margin-right: 15px;">
+  									<path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
+								</svg>
+									<p>Log In</p>
+							</a>
+						</li>
 
-						<li class="nav-item"><a data-bs-toggle="collapse"
-							href="#submenu"> <svg xmlns="http://www.w3.org/2000/svg"
-									width="16" height="16" fill="currentColor"
-									class="bi bi-person-fill-add" viewBox="0 0 16 16"
-									style="margin-right: 15px;">
-  						<path
-										d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-  						<path
-										d="M2 13c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q8.844 9.002 8 9c-5 0-6 3-6 4" />
-						</svg>
-								<p>Register</p>
-						</a></li>
-
-						<li class="nav-item"><a data-bs-toggle="collapse"
-							href="#sidebarLayouts"> <i class="fas fa-th-list"></i>
-								<p>Sidebar Layouts</p>
-						</a>
-							<div class="collapse" id="sidebarLayouts">
-								<ul class="nav nav-collapse">
-									<li><a href="sidebar-style-2.html"> <span
-											class="sub-item">Sidebar Style 2</span>
-									</a></li>
-									<li><a href="icon-menu.html"> <span class="sub-item">Icon
-												Menu</span>
-									</a></li>
-								</ul>
-							</div></li>
-
-						<li class="nav-item"><a data-bs-toggle="collapse"
-							href="#tables"> <i class="fas fa-table"></i>
-								<p>Tables</p>
-						</a>
-							<div class="collapse" id="tables">
-								<ul class="nav nav-collapse">
-									<li><a href="tables/tables.html"> <span
-											class="sub-item">Basic Table</span>
-									</a></li>
-									<li><a href="tables/datatables.html"> <span
-											class="sub-item">Datatables</span>
-									</a></li>
-								</ul>
-							</div></li>
-						<li class="nav-item"><a data-bs-toggle="collapse"
-							href="#maps"> <i class="fas fa-map-marker-alt"></i>
-								<p>Maps</p>
-						</a>
-							<div class="collapse" id="maps">
-								<ul class="nav nav-collapse">
-									<li><a href="maps/googlemaps.html"> <span
-											class="sub-item">Google Maps</span>
-									</a></li>
-									<li><a href="maps/jsvectormap.html"> <span
-											class="sub-item">Jsvectormap</span>
-									</a></li>
-								</ul>
-							</div></li>
-
+						<li class="nav-item">
+							<a id="register" href="register">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill-add" viewBox="0 0 16 16" style="margin-right: 15px;">
+  									<path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+  									<path d="M2 13c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q8.844 9.002 8 9c-5 0-6 3-6 4" />
+								</svg>
+									<p>Register</p>
+							</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -144,10 +108,10 @@
 			<div class="main-header">
 				<div class="main-header-logo">
 					<!-- Logo Header -->
+					
 					<div class="logo-header" data-background-color="dark">
-						<a href="index.html" class="logo"> <img
-							src=" img/kaiadmin/logo_light.svg" alt="navbar brand"
-							class="navbar-brand" height="20" />
+						<a href="index.html" class="logo">
+						<img src=" img/kaiadmin/logo_light.svg" alt="navbar brand" class="navbar-brand" height="20" />
 						</a>
 						<div class="nav-toggle">
 							<button class="btn btn-toggle toggle-sidebar">
@@ -165,41 +129,20 @@
 				</div>
 
 				<!-- Navbar Header -->
-				<nav
-					class="navbar navbar-header navbar-header-transparent navbar-expand-lg border-bottom">
+				<nav class="navbar navbar-header navbar-header-transparent navbar-expand-lg border-bottom">
 					<div class="container-fluid">
-						<nav
-							class="navbar navbar-header-left navbar-expand-lg navbar-form nav-search p-0 d-none d-lg-flex">
+						<nav class="navbar navbar-header-left navbar-expand-lg navbar-form nav-search p-0 d-none d-lg-flex">
 						</nav>
 
-						<ul class="navbar-nav topbar-nav ms-md-auto align-items-center">
-							<li
-								class="nav-item topbar-icon dropdown hidden-caret d-flex d-lg-none">
-								<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
-								href="#" role="button" aria-expanded="false"
-								aria-haspopup="true"> <i class="fa fa-search"></i>
-							</a>
-								<ul class="dropdown-menu dropdown-search animated fadeIn">
-									<form class="navbar-left navbar-form nav-search">
-										<div class="input-group">
-											<input type="text" placeholder="Search ..."
-												class="form-control" />
-										</div>
-									</form>
-								</ul>
-							</li>
-
-							<li class="nav-item topbar-icon dropdown hidden-caret"><a
-								class="nav-link dropdown-toggle" href="#" id="notifDropdown"
-								role="button" data-bs-toggle="dropdown" aria-haspopup="true"
-								aria-expanded="false"> <i class="fa fa-bell"></i> <span
-									class="notification">4</span>
-							</a>
-								<ul class="dropdown-menu notif-box animated fadeIn"
-									aria-labelledby="notifDropdown">
+							<ul class="navbar-nav topbar-nav ms-md-auto align-items-center">
+														<li class="nav-item topbar-icon dropdown hidden-caret">
+								<a class="nav-link dropdown-toggle" href="#" id="notifDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
+									<i class="fa fa-bell"></i>
+									<span class="notification">4</span>
+								</a>
+								<ul class="dropdown-menu notif-box animated fadeIn"	aria-labelledby="notifDropdown">
 									<li>
-										<div class="dropdown-title">You have 4 new notification
-										</div>
+										<div class="dropdown-title">You have 4 new notification	</div>
 									</li>
 									<li>
 										<div class="notif-scroll scrollbar-outer">
@@ -243,7 +186,8 @@
 									<li><a class="see-all" href="javascript:void(0);">See
 											all notifications<i class="fa fa-angle-right"></i>
 									</a></li>
-								</ul></li>
+								</ul>
+								</li>
 							<li class="nav-item topbar-icon dropdown hidden-caret"><a
 								class="nav-link" data-bs-toggle="dropdown" href="#"
 								aria-expanded="false"> <i class="fas fa-layer-group"></i>
