--- a/WithTrip/src/main/resources/templates/tripplan.html
+++ b/WithTrip/src/main/resources/templates/tripplan.html
@@ -5,6 +5,7 @@
 	<title>Avatars - Kaiadmin Bootstrap 5 Admin Dashboard</title>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
 	<link rel="icon" href=" img/kaiadmin/favicon.ico" type="image/x-icon"/>
+	<link href="https://fonts.googleapis.com/css?family=Baloo|Ubuntu" rel="stylesheet">
 
 	<!-- Fonts and icons -->
 	<script src=" js/plugin/webfont/webfont.min.js"></script>
@@ -20,11 +21,16 @@
 
 	<!-- CSS Files -->
 	<link rel="stylesheet" href=" css/bootstrap.min.css">
+	<link rel="stylesheet" href=" css/calender.css">
 	<link rel="stylesheet" href=" css/plugins.min.css">
+
+
 	<link rel="stylesheet" href=" css/kaiadmin.min.css">
 
 	<!-- CSS Just for demo purpose, don't include it in your project -->
 	<link rel="stylesheet" href=" css/demo.css">
+	
+	
 </head>
 
 <body>
@@ -258,10 +264,9 @@
 							<div class="card">
 								<div class="card-header">
 									<h4 class="card-title">Title</h4>
-
 								</div>
 								<div class="card-body">
-									
+									<input type="text" , placeholder="여행 타이틀을 입력하세요.">
 								</div>
 							</div>
 						</div>
@@ -272,32 +277,68 @@
 
 								</div>
 								<div class="card-body">
-
+									<input type="text" , placeholder="여행지를 입력하세요.">
 								</div>
 							</div>
 						</div>
+
 						<div class="col-md-12">
 							<div class="card">
 								<div class="card-header">
 									<h4 class="card-title">Date</h4>
 
 								</div>
-								<div class="card-body">
-									<p class="demo">
-										<div class="avatar">
-										</div>
+								<div class="card-body" style="height: 900px;">
+									<div id="calender">
+										<div id="calender-wrapper">
+											<div id="calender-panel">
+												<div id="info">
+													<div id="info-titles" class="flex row center-vh">
+														<p>Start Date :</p>
+														<p>End Date :</p>
+													</div>
+													<div class="flex row center-vh">
+														<p id="startdate"></p>
+														<p id="enddate"></p>
+													</div>
+												</div>
+												<div id="calender-title" class="disable-select flex row center-v around">
+													<div id="left" class="flex row center-vh">
+														<span><</span>
+													</div>
+													
+										
+													<p class="flex row center-vh"></p>
+													<div id="right" class="flex row center-vh">
+														<span>></span>
+													</div>
+												</div>
+												<div id="days" class="disable-select">
+													<p>MON</p>
+													<p>TUE</p>
+													<p>WEDS</p>
+													<p>THURS</p>
+													<p>FRI</p>
+													<p>SAT</p>
+													<p>SUN</p>
+												</div>
+												<div id="calender-content"></div>
 
-										<div class="avatar">
+											</div>
 										</div>
-									</p>
+									</div>
+									
+								</div>
+								<div style="display: flex; justify-content: flex-end;">
+									<input type="submit" value="다음으로" style="width: 100px;" />
 								</div>
 							</div>
 						</div>
+						
+						
 					</div>
-				</div>
-			</div>
-			
-			<footer class="footer">
+
+					<footer class="footer">
 				<div class="container-fluid d-flex justify-content-between">
 					<nav class="pull-left">
 						<ul class="nav">
@@ -331,9 +372,10 @@
 	<script src=" js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 	<!-- Moment JS -->
 	<script src=" js/plugin/moment/moment.min.js"></script>
-
+	
 	<!-- Chart JS -->
 	<script src=" js/plugin/chart.js/chart.min.js"></script>
+	<script src=" js/calender.js"></script>
 
 	<!-- jQuery Sparkline -->
 	<script src=" js/plugin/jquery.sparkline/jquery.sparkline.min.js"></script>
@@ -346,7 +388,7 @@
 
 	<!-- Bootstrap Notify -->
 	<script src=" js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
-
+	
 	<!-- jQuery Vector Maps -->
 	<script src=" js/plugin/jsvectormap/jsvectormap.min.js"></script>
 	<script src=" js/plugin/jsvectormap/world.js"></script>
@@ -359,5 +401,8 @@
 
 	<!-- Kaiadmin DEMO methods, don't include it in your project! -->
 	<script src=" js/setting-demo2.js"></script>
+	
+	
+
 </body>
 </html>
