1. intellij로 변경 2. tripdetail 페이지 구현중

--- a/WithTrip/src/main/resources/static/css/kaiadmin.css
+++ b/WithTrip/src/main/resources/static/css/kaiadmin.css
@@ -541,7 +541,7 @@ body {
   border-top: 1px solid #eee;
   padding: 15px;
   background: #ffffff;
-  width: 100%; }
+  width: 1970px; }
   .footer .container, .footer .container-fluid {
     display: flex;
     align-items: center; }
