- tripdetail 표 부분 수정중

--- a/WithTrip/src/main/resources/static/css/tripdetail.css
+++ b/WithTrip/src/main/resources/static/css/tripdetail.css
@@ -13,14 +13,20 @@
     }
     .tripdetail .table1 {
       margin-bottom: 70px;
+      margin-left: -200px;
     }
     .tripdetail th, td {
       border: 1px solid #ddd;
-      padding: 30px;
+      padding: 20px;
       text-align: center;
     }
     .tripdetail .colspan {
       background-color: rgba(212, 150, 150, 0.4);
     }
+
+     .tripdetail .card .card-body{
+     height: 800px;
+    padding-left: 195px;
+     }
 
 
