--- a/WithTrip/src/main/resources/templates/tripdetail.html
+++ b/WithTrip/src/main/resources/templates/tripdetail.html
@@ -283,23 +283,30 @@
                     </div>
 
                     <div class="col-md-12">
+                        <div class="tripdetail" style="flex: 1;">
                         <div class="card">
                             <div class="card-header">
                                 <h4 class="card-title">세부일정</h4>
                             </div>
-                            <div class="card-body" style="display: flex; flex-direction: column; height: 900px;">
+                            <div class="card-body" style="display: flex; flex-direction: column;">
                                 <!-- 일정 테이블 -->
-                              <div class="tripdetail" style="flex: 1;">
+
                                     <div class="container" >
                                         <table class="table1">
                                             <thead>
                                             <tr>
-                                                <th>Time</th>
+                                                <th></th>
                                                 <th colspan="3">DAY 1</th>
                                                 <th colspan="3">DAY 2</th>
                                             </tr>
                                             </thead>
                                             <tbody>
+                                            <tr>
+                                                <td>Time</td>
+
+                                                <th>일정</th><th>내용</th><th>비용</th>
+                                                <th>일정</th><th>내용</th><th>비용</th>
+                                            </tr>
                                             <tr>
                                                 <td>10:00 AM - 11:00 PM</td>
                                                 <th><input type="text" , placeholder="여행 일정을 입력하세요."></th>
