--- a/WithTrip/src/main/resources/templates/tripplan.html
+++ b/WithTrip/src/main/resources/templates/tripplan.html
@@ -330,7 +330,7 @@
 									
 								</div>
 								<div style="display: flex; justify-content: flex-end;">
-									<input type="submit" value="다음으로" style="width: 100px;" />
+									<input type="submit" href="tripdetail" value="다음으로" style="width: 100px;" />
 								</div>
 							</div>
 						</div>
