--- a/WithTrip/src/main/resources/templates/tripplan.html
+++ b/WithTrip/src/main/resources/templates/tripplan.html
@@ -21,7 +21,7 @@
 
 	<!-- CSS Files -->
 	<link rel="stylesheet" href=" css/bootstrap.min.css">
-	<link rel="stylesheet" href=" css/calender.css">
+
 	<link rel="stylesheet" href=" css/plugins.min.css">
 
 
@@ -267,7 +267,7 @@
 									<h4 class="card-title">Title</h4>
 								</div>
 								<div class="card-body">
-									<input type="text" name="planTitle" placeholder="여행 타이틀을 입력하세요.">
+									<input type="text" id="planTitle" name="planTitle" placeholder="여행 타이틀을 입력하세요.">
 								</div>
 							</div>
 						</div>
@@ -277,7 +277,7 @@
 									<h4 class="card-title">Travel Destination</h4>
 								</div>
 								<div class="card-body">
-									<input type="text" name="destination" placeholder="여행지를 입력하세요.">
+									<input type="text" id="destination" name="destination" placeholder="여행지를 입력하세요.">
 								</div>
 							</div>
 						</div>
@@ -288,57 +288,23 @@
 									<h4 class="card-title">Date</h4>
 
 								</div>
-								<div class="card-body" style="height: 900px;">
-									<div id="calender">
-										<div id="calender-wrapper">
-											<div id="calender-panel">
-												<div id="info">
-													<div id="info-titles" class="flex row center-vh">
-														<p>Start Date :</p>
-														<p>End Date :</p>
-													</div>
-													<div class="flex row center-vh">
-														<p id="startDate"></p>
-														<p id="endDate"></p>
-													</div>
-												</div>
-												<div id="calender-title" class="disable-select flex row center-v around">
-													<div id="left" class="flex row center-vh">
-														<span><</span>
-													</div>
-
-													<p class="flex row center-vh"></p>
-													<div id="right" class="flex row center-vh">
-														<span>></span>
-													</div>
-												</div>
-												<div id="days" class="disable-select">
-													<p>MON</p>
-													<p>TUE</p>
-													<p>WEDS</p>
-													<p>THURS</p>
-													<p>FRI</p>
-													<p>SAT</p>
-													<p>SUN</p>
-												</div>
-												<div id="calender-content"></div>
-
-											</div>
-										</div>
-									</div>
-
+								<div class="card-body" style="height: 90px;">
+									출발일자: <input type="date" id="startdate" name="startdate" placeholder="출발날짜를 선택하세요."><br/>
+									~ 종료일자: <input type="date" id="enddate" name="enddate" placeholder="종료날짜를 선택하세요.">
 								</div>
-								<div style="display: flex; justify-content: flex-end;">
-									<input type="submit" href="tripdetail" value="다음으로" style="width: 100px;" />
-								</div>
-								</form>
+
 							</div>
+							<div style="display: flex; justify-content: flex-end;">
+								<input type="submit" href="tripdetail" value="다음으로" style="width: 100px;" />
+							</div>
+						</div>
+						</form>
 						</div>
 
 
 					</div>
 
-					<footer class="footer">
+					<footer class="footer" style="bottom:0;">
 				<div class="container-fluid d-flex justify-content-between">
 					<nav class="pull-left">
 						<ul class="nav">
@@ -371,8 +337,6 @@
 
 	<!-- Chart JS -->
 	<script src=" js/plugin/chart.js/chart.min.js"></script>
-	<script src=" js/calender.js"></script>
-
 	<!-- jQuery Sparkline -->
 	<script src=" js/plugin/jquery.sparkline/jquery.sparkline.min.js"></script>
 
@@ -397,6 +361,6 @@
 
 	<!-- Kaiadmin DEMO methods, don't include it in your project! -->
 	<script src=" js/setting-demo2.js"></script>
-
+	</div>
 </body>
 </html>
