--- a/WithTrip/src/main/resources/templates/tripplan.html
+++ b/WithTrip/src/main/resources/templates/tripplan.html
@@ -267,7 +267,7 @@
 									<h4 class="card-title">Title</h4>
 								</div>
 								<div class="card-body">
-									<input type="text" id="planTitle" name="planTitle" placeholder="여행 타이틀을 입력하세요.">
+									<input type="text" id="planTitle" name="planTitle" placeholder="여행 타이틀을 입력하세요." required>
 								</div>
 							</div>
 						</div>
@@ -277,7 +277,7 @@
 									<h4 class="card-title">Travel Destination</h4>
 								</div>
 								<div class="card-body">
-									<input type="text" id="destination" name="destination" placeholder="여행지를 입력하세요.">
+									<input type="text" id="destination" name="destination" placeholder="여행지를 입력하세요." required>
 								</div>
 							</div>
 						</div>
@@ -289,8 +289,8 @@
 
 								</div>
 								<div class="card-body" style="height: 90px;">
-									출발일자: <input type="date" id="startdate" name="startdate" placeholder="출발날짜를 선택하세요."><br/>
-									~ 종료일자: <input type="date" id="enddate" name="enddate" placeholder="종료날짜를 선택하세요.">
+									출발일자: <input type="date" id="startdate" name="startdate" placeholder="출발날짜를 선택하세요." required><br/>
+									~ 종료일자: <input type="date" id="enddate" name="enddate" placeholder="종료날짜를 선택하세요." required>
 								</div>
 
 							</div>
