--- a/WithTrip/src/main/resources/templates/tripplan.html
+++ b/WithTrip/src/main/resources/templates/tripplan.html
@@ -289,8 +289,8 @@
 
 								</div>
 								<div class="card-body" style="height: 90px;">
-									출발일자: <input type="date" id="startdate" name="startdate" placeholder="출발날짜를 선택하세요." required><br/>
-									~ 종료일자: <input type="date" id="enddate" name="enddate" placeholder="종료날짜를 선택하세요." required>
+									출발일자: <input type="date" id="startDate" name="startDate" placeholder="출발날짜를 선택하세요." required><br/>
+									~ 종료일자: <input type="date" id="endDate" name="endDate" placeholder="종료날짜를 선택하세요." required>
 								</div>
 
 							</div>
