--- a/WithTrip/src/main/resources/templates/tripdetail.html
+++ b/WithTrip/src/main/resources/templates/tripdetail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Avatars - Kaiadmin Bootstrap 5 Admin Dashboard</title>
@@ -270,14 +270,14 @@
                     <div class="col-md-6">
                         <div class="card">
                             <div class="card-header">
-                                <h4 class="card-title">여행 제목 띄우기</h4>
+                                <h4 class="card-title">Title: <span th:text="${tripplan.planTitle}"></span></h4>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card">
                             <div class="card-header">
-                                <h4 class="card-title">여행지 정보 띄우기</h4>
+                                <h4 class="card-title">Destination: <span th:text="${tripplan.destination}"></span></h4>
                             </div>
                         </div>
                     </div>
